objects/Five9LSP__Five9_List_Item__c.object
<CustomObject>
    <description>A record here should represent a record in a dialing list in Five9 corresponding to the parent Five9 List object.</description>
    <fields>
        <fullName>Five9LSP__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Five9 List Items</relationshipLabel>
        <relationshipName>Five9_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Five9 List Items</relationshipLabel>
        <relationshipName>Five9_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Compound_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Five9_List__c.Id + sObject.Id (always do ListID first!)</description>
        <inlineHelpText>This is to enforce one object per list constraint. This should always be set by trigger.</inlineHelpText>
        <label>Composite Key</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Five9LSP__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Five9 List Items</relationshipLabel>
        <relationshipName>Five9_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Controlling_Object_Type__c</fullName>
        <formula>Five9LSP__Five9_List__r.Five9LSP__Controlling_Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Controlling Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Deleted_Controlling_Object_ID__c</fullName>
        <label>Deleted Controlling Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Five9_List__c</fullName>
        <label>Five9 List</label>
        <referenceTo>Five9LSP__Five9_List__c</referenceTo>
        <relationshipLabel>Five9 List Items</relationshipLabel>
        <relationshipName>Five9_List_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Last_Sync_Time__c</fullName>
        <label>Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Five9 List Items</relationshipLabel>
        <relationshipName>Five9_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Five9 List Items</relationshipLabel>
        <relationshipName>Five9_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Previous_Update_Time__c</fullName>
        <label>Previous Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Sync_Message__c</fullName>
        <label>Sync Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Sync_Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <label>Sync Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9LSP__last_allow_sync__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do not edit! System use only.</inlineHelpText>
        <label>Last Allow Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRB_Refund_Advance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HRB Refund Advance</label>
        <referenceTo>HRB_Refund_Advance__c</referenceTo>
        <relationshipLabel>Five9 List Items</relationshipLabel>
        <relationshipName>Five9_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Checkbox_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Checkbox Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Five9 List Item</label>
    <nameField>
        <displayFormat>F9LI{0000000}</displayFormat>
        <label>Five9 List Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Five9 List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>